k8s/ftp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ftp-http-ingress
spec:
  backend:
    serviceName: ftp-http-service
    servicePort: 21
